@@ -1,3 +1,5 @@
+(2001/10/19 - broeker) Replace usages of freopen() by fclose()/fopen() pairs
+		       to work around bug in some Linux libc constellation.
 (2001/10/10 - broeker) Remove unused argument 'name' of addsrcfile() function.
 	               Alternative buffer overflow protection scheme, using
 		       "%.*s" format specifiers in ordinary sprintf(); now used
